<resources>
    <string name="app_name">bofangqi1</string>
    <string name="pause">PAUSE</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="loop">loop</string>
    <string name="上一曲" />
    <string name="下一曲" />
    <string name="pre">上一曲</string>
    <string name="next">下一曲</string>
    <string name="random">RANDOM</string>
    <string name="_00_00_2_00">00:00/2:00</string>
    <string name="music">music~</string>>
</resources>